--- a/src/index.html
+++ b/src/index.html
@@ -23,12 +23,12 @@
   <body>
     <header class="page__section-space page__header-space-for-mobile header">
 
-      <div class="header__flex-box">
+      <div class="header__container">
         <a
         href="#menu"
         class="icon icon__block icon--menu"
       ></a>
-        <div class="header__container">
+        <div class="header__left-container">
 
           <div class="header__l-container">
             <h1 class="header__title">Художній музей</h1>
