--- a/src/index.html
+++ b/src/index.html
@@ -22,14 +22,12 @@
 
   <body>
     <header class="page__section-space page__header-space-for-mobile header">
-
       <div class="header__container">
         <a
-        href="#menu"
-        class="icon icon__block icon--menu"
-      ></a>
+          href="#menu"
+          class="icon icon__block icon--menu"
+        ></a>
         <div class="header__left-container">
-
           <div class="header__l-container">
             <h1 class="header__title">Художній музей</h1>
 
@@ -59,9 +57,7 @@
             MU
           </h1>
         </div>
-
       </div>
-
     </header>
     <aside
       class="page__menu menu"
@@ -472,11 +468,7 @@
           </div>
 
           <button class="footer__scroll-to-top">
-            <img
-              src="./images/icon/arrow-up.svg"
-              class="footer__scroll-to-top-img"
-              alt="Arrow up"
-            />
+            <span class="footer__scroll-to-top-img"></span>
           </button>
 
           <hr class="footer__separator separator separator--footer" />
