add header, menu and hero

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,14 @@
+<!-- #region head -->
 <!DOCTYPE html>
 <html class="page" lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Title</title>
-    <link rel="icon" href="./images/logo.svg">
-    <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" href="./images/logo.svg" />
+    <link rel="stylesheet" href="styles/style.scss" />
   </head>
+  <!-- #endregion -->
   <body class="page__body">
     <header class="header">
       <div class="header__container container">
@@ -19,8 +21,8 @@
           <img
             class="logo__img"
             src="images/logo.svg"
-            alt="Namu logo"
-          >
+            alt="NAMU logo"
+          />
         </a>
       </div>
     </header>
@@ -83,8 +85,7 @@
               </p>
 
               <p class="menu__timetable-text">
-                Каса припиняє роботу за 1 годину
-                до закриття музею
+                Каса припиняє роботу за 1 годину до закриття музею
               </p>
             </div>
           </div>
@@ -94,10 +95,8 @@
 
     <main class="main">
       <section class="hero">
-        <div class="container">
-          <h1 class="hero__title">
-            художній музей
-          </h1>
+        <div class="hero__container container">
+          <h1 class="hero__title">художній музей</h1>
           <button class="hero__btn btn" type="button">квитки</button>
         </div>
       </section>
