--- a/src/index.html
+++ b/src/index.html
@@ -369,21 +369,13 @@
                 href="https://www.facebook.com/namu.museum/"
                 target="_blank"
               >
-                <img
-                  src="./images/icon/facebook.svg"
-                  alt="Faceboock"
-                  class="footer__icon"
-                />
+                <span class="footer__icon footer__icon--facebook"></span>
               </a>
               <a
                 href="https://www.instagram.com/namu.museum/"
                 target="_blank"
               >
-                <img
-                  src="./images/icon/instagram.svg"
-                  alt="Instagram"
-                  class="footer__icon"
-                />
+                <span class="footer__icon footer__icon--instagram"></span>
               </a>
             </div>
           </div>
