--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header></header>
+    <body></body>
+    <footer></footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
