--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,138 @@
         <div class="hero__container container">
           <h1 class="hero__title">художній музей</h1>
           <button class="hero__btn btn" type="button">квитки</button>
+          <a class="hero__link" href="#"> Події </a>
+        </div>
+      </section>
+      <section class="events">
+        <div class="container">
+          <h2 class="events__title title">Актуальні події</h2>
+        </div>
+        <ul class="events__list">
+          <li class="events__item">
+            <div class="container">
+              <article class="event">
+                <picture class="event__img">
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="images/events/event-img-1-big.jpg"
+                  />
+                  <img
+                    src="images/events/event-img-1-small.jpg"
+                    alt="event img"
+                  />
+                </picture>
+                <div class="event__content">
+                  <div class="event__info">
+                    <span class="event__info-type">виставка</span>
+                    <span class="event__info-date">26.08-29.11.2019</span>
+                  </div>
+                  <h3 class="event__title">Йду і повертаюсь</h3>
+                  <p class="event__text">
+                    Національний Художній Музей України презентує унікальну
+                    частину колекції Градобанку - українське мистецтво другої
+                    половини 1980-1995 років.
+                  </p>
+                </div>
+              </article>
+            </div>
+          </li>
+          <li class="events__item">
+            <div class="container">
+              <article class="event">
+                <picture class="event__img">
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="images/events/event-img-2-big.jpg"
+                  />
+                  <img
+                    src="images/events/event-img-2-small.jpg"
+                    alt="event img"
+                  />
+                </picture>
+                <div class="event__content">
+                  <div class="event__info">
+                    <span class="event__info-type">виставка</span>
+                    <span class="event__info-date">26.08-29.11.2019</span>
+                  </div>
+                  <h3 class="event__title">І спогади і мрії</h3>
+                  <p class="event__text">
+                    Національний художній музей України до 100 річчя від дня
+                    народження видатної української художниці Тетяни Яблонської
+                    відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                  </p>
+                </div>
+              </article>
+            </div>
+          </li>
+          <li class="events__item">
+            <article class="event event--lecture">
+              <picture class="event__img">
+                <source
+                  media="(min-width: 768px)"
+                  srcset="images/events/event-img-3-big.jpg"
+                />
+                <img
+                  src="images/events/event-img-3-small.jpg"
+                  alt="event img"
+                />
+              </picture>
+              <div class="event__content">
+                <div class="event__info">
+                  <span class="event__info-type">лекція</span>
+                  <span class="event__info-date">26/08/2019 - 11:00</span>
+                </div>
+                <h3 class="event__title">Від класицизму до романтизму</h3>
+              </div>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <section class="gallery">
+        <div class="container">
+          <h2 class="title">Галерея</h2>
+          <div class="slider">
+            <ul class="slider__list">
+              <li class="slider__item">
+                <picture class="slider__img">
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="images/gallery/gallery-1-big.jpg"
+                  />
+                  <img src="images/gallery/gallery-1-small.jpg" alt="gallery img">
+                </picture>
+              </li>
+              <li class="slider__item">
+                <picture class="slider__img">
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="images/gallery/gallery-2-big.jpg"
+                  />
+                  <img src="images/gallery/gallery-2-small.jpg" alt="gallery img">
+                </picture>
+              </li>
+              <li class="slider__item">
+                <picture class="slider__img">
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="images/gallery/gallery-1-big.jpg"
+                  />
+                  <img src="images/gallery/gallery-1-small.jpg" alt="gallery img">
+                </picture>
+              </li>
+            </ul>
+            <ul class="slider__buttons">
+              <li class="slider__buttons-item">
+                <button class="slider__buttons-btn slider__buttons-btn--active"></button>
+              </li>
+              <li class="slider__buttons-item">
+                <button class="slider__buttons-btn"></button>
+              </li>
+              <li class="slider__buttons-item">
+                <button class="slider__buttons-btn"></button>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
