create new slider

--- a/src/index.html
+++ b/src/index.html
@@ -156,7 +156,8 @@
                   <p class="event__text">
                     Національний художній музей України до 100 річчя від дня
                     народження видатної української художниці Тетяни Яблонської
-                    відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                    відкриває ретроспективну ювілейну виставку «І спогади і
+                    мрії».
                   </p>
                 </div>
               </article>
@@ -196,7 +197,10 @@
                     media="(min-width: 768px)"
                     srcset="images/gallery/gallery-1-big.jpg"
                   />
-                  <img src="images/gallery/gallery-1-small.jpg" alt="gallery img">
+                  <img
+                    src="images/gallery/gallery-1-small.jpg"
+                    alt="gallery img"
+                  />
                 </picture>
               </li>
               <li class="slider__item">
@@ -205,7 +209,10 @@
                     media="(min-width: 768px)"
                     srcset="images/gallery/gallery-2-big.jpg"
                   />
-                  <img src="images/gallery/gallery-2-small.jpg" alt="gallery img">
+                  <img
+                    src="images/gallery/gallery-2-small.jpg"
+                    alt="gallery img"
+                  />
                 </picture>
               </li>
               <li class="slider__item">
@@ -214,13 +221,18 @@
                     media="(min-width: 768px)"
                     srcset="images/gallery/gallery-1-big.jpg"
                   />
-                  <img src="images/gallery/gallery-1-small.jpg" alt="gallery img">
+                  <img
+                    src="images/gallery/gallery-1-small.jpg"
+                    alt="gallery img"
+                  />
                 </picture>
               </li>
             </ul>
             <ul class="slider__buttons">
               <li class="slider__buttons-item">
-                <button class="slider__buttons-btn slider__buttons-btn--active"></button>
+                <button
+                  class="slider__buttons-btn slider__buttons-btn--active"
+                ></button>
               </li>
               <li class="slider__buttons-item">
                 <button class="slider__buttons-btn"></button>
