--- a/src/index.html
+++ b/src/index.html
@@ -189,7 +189,7 @@
       <section class="gallery">
         <div class="container">
           <h2 class="title">Галерея</h2>
-          <div class="slider">
+          <div class="gallery__slider slider">
             <ul class="slider__list">
               <li class="slider__item">
                 <picture class="slider__img">
@@ -203,8 +203,12 @@
                   />
                 </picture>
               </li>
-              <li class="slider__item">
+              <li class="slider__item slider__item--big">
                 <picture class="slider__img">
+                  <source
+                    media="(min-width: 1280px)"
+                    srcset="images/gallery/gallery-2-desk.jpg"
+                  />
                   <source
                     media="(min-width: 768px)"
                     srcset="images/gallery/gallery-2-big.jpg"
@@ -215,30 +219,37 @@
                   />
                 </picture>
               </li>
-              <li class="slider__item">
+              <li class="slider__item slider__item--wide">
                 <picture class="slider__img">
                   <source
+                    media="(min-width: 1280px)"
+                    srcset="images/gallery/gallery-3-desk.jpg"
+                  />
+                  <source
                     media="(min-width: 768px)"
-                    srcset="images/gallery/gallery-1-big.jpg"
+                    srcset="images/gallery/gallery-3-big.jpg"
                   />
                   <img
-                    src="images/gallery/gallery-1-small.jpg"
+                    src="images/gallery/gallery-3-small.jpg"
                     alt="gallery img"
                   />
                 </picture>
               </li>
-            </ul>
-            <ul class="slider__buttons">
-              <li class="slider__buttons-item">
-                <button
-                  class="slider__buttons-btn slider__buttons-btn--active"
-                ></button>
-              </li>
-              <li class="slider__buttons-item">
-                <button class="slider__buttons-btn"></button>
-              </li>
-              <li class="slider__buttons-item">
-                <button class="slider__buttons-btn"></button>
+              <li class="slider__item">
+                <picture class="slider__img">
+                  <source
+                    media="(min-width: 1280px)"
+                    srcset="images/gallery/gallery-4-desk.jpg"
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="images/gallery/gallery-4-big.jpg"
+                  />
+                  <img
+                    src="images/gallery/gallery-4-small.jpg"
+                    alt="gallery img"
+                  />
+                </picture>
               </li>
             </ul>
           </div>
