--- a/src/index.html
+++ b/src/index.html
@@ -37,54 +37,54 @@
           <nav class="menu__nav nav">
             <ul class="nav__list">
               <li class="nav__item">
-                <a class="nav__link" href="#">Галерея</a>
+                <a class="nav__link" href="#galery">Галерея</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="#">Про Нас</a>
+                <a class="nav__link" href="#hero">Про Нас</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="#">Виставки та події</a>
+                <a class="nav__link" href="#events">Виставки та події</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="#">Контакти</a>
+                <a class="nav__link" href="#footer">Контакти</a>
               </li>
             </ul>
           </nav>
         </div>
 
-        <div class="menu__timetable">
-          <span class="menu__timetable-title">Графік роботи</span>
+        <div class="menu__timetable timetable">
+          <span class="timetable__title">Графік роботи</span>
 
-          <div class="menu__timetable-inner">
-            <ul class="menu__timetable-list">
-              <li class="menu__timetable-item">
-                <span class="menu__timetable-time">12:00 — 20:00</span>
+          <div class="timetable__inner">
+            <ul class="timetable__list">
+              <li class="timetable__item">
+                <span class="timetable__time">12:00 — 20:00</span>
                 середа
               </li>
-              <li class="menu__timetable-item">
-                <span class="menu__timetable-time">12:00 — 20:00</span>
+              <li class="timetable__item">
+                <span class="timetable__time">12:00 — 20:00</span>
                 четвер
               </li>
-              <li class="menu__timetable-item">
-                <span class="menu__timetable-time">12:00 — 20:00</span>
+              <li class="timetable__item">
+                <span class="timetable__time">12:00 — 20:00</span>
                 п’ятниця
               </li>
-              <li class="menu__timetable-item">
-                <span class="menu__timetable-time">11:00 — 19:00</span>
+              <li class="timetable__item">
+                <span class="timetable__time">11:00 — 19:00</span>
                 субота
               </li>
-              <li class="menu__timetable-item">
-                <span class="menu__timetable-time">11:00 — 19:00</span>
+              <li class="timetable__item">
+                <span class="timetable__time">11:00 — 19:00</span>
                 неділя
               </li>
             </ul>
 
-            <div class="menu__timetable-texts">
-              <p class="menu__timetable-text">
+            <div class="timetable__texts">
+              <p class="timetable__text">
                 <span>Вихідні:</span> понеділок, вівторок
               </p>
 
-              <p class="menu__timetable-text">
+              <p class="timetable__text">
                 Каса припиняє роботу за 1 годину до закриття музею
               </p>
             </div>
@@ -93,15 +93,17 @@
       </div>
     </aside>
 
+    <a href="#" class="page__overlay"></a>
+
     <main class="main">
-      <section class="hero">
+      <section class="hero" id="hero">
         <div class="hero__container container">
           <h1 class="hero__title">художній музей</h1>
           <button class="hero__btn btn" type="button">квитки</button>
-          <a class="hero__link" href="#"> Події </a>
+          <a class="hero__link" href="#events"> Події </a>
         </div>
       </section>
-      <section class="events">
+      <section class="events" id="events">
         <div class="container">
           <h2 class="events__title title">Актуальні події</h2>
         </div>
@@ -124,7 +126,7 @@
                     <span class="event__info-type">виставка</span>
                     <span class="event__info-date">26.08-29.11.2019</span>
                   </div>
-                  <h3 class="event__title">Йду і повертаюсь</h3>
+                  <a class="event__title" href="#">Йду і повертаюсь</a>
                   <p class="event__text">
                     Національний Художній Музей України презентує унікальну
                     частину колекції Градобанку - українське мистецтво другої
@@ -152,7 +154,7 @@
                     <span class="event__info-type">виставка</span>
                     <span class="event__info-date">26.08-29.11.2019</span>
                   </div>
-                  <h3 class="event__title">І спогади і мрії</h3>
+                  <a class="event__title" href="#">І спогади і мрії</a>
                   <p class="event__text">
                     Національний художній музей України до 100 річчя від дня
                     народження видатної української художниці Тетяни Яблонської
@@ -180,13 +182,16 @@
                   <span class="event__info-type">лекція</span>
                   <span class="event__info-date">26/08/2019 - 11:00</span>
                 </div>
-                <h3 class="event__title">Від класицизму до романтизму</h3>
+                <a class="event__title" href="#">
+                  Від класицизму до романтизму
+                </a>
+
               </div>
             </article>
           </li>
         </ul>
       </section>
-      <section class="gallery">
+      <section class="gallery" id="galery">
         <div class="container">
           <h2 class="title">Галерея</h2>
           <div class="gallery__slider slider">
@@ -255,9 +260,168 @@
           </div>
         </div>
       </section>
+      <section class="subscription" id="subscription">
+        <div class="subscription__container container">
+          <h2 class="subscription__title title">Підписка</h2>
+
+          <p class="subscription__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+
+          <form
+            class="subscription__form form"
+            action="#"
+            onsubmit="this.reset(); return false;"
+          >
+            <label class="sr-only" for="email">
+              Please, enter your email!
+            </label>
+
+            <input
+              class="form__input"
+              id="email"
+              name="email"
+              type="email"
+              placeholder="E-mail"
+              required
+            />
+
+            <button class="form__btn btn btn--square">
+              <span class="sr-only">Send email to subscribe</span>
+            </button>
+          </form>
+        </div>
+      </section>
     </main>
 
-    <footer class="footer"></footer>
+    <footer
+      class="footer"
+      id="footer"
+    >
+      <div class="footer__container container">
+        <div class="footer__head">
+          <a class="footer__logo logo" href="#">
+            <span class="sr-only">Go to main section</span>
+            <img
+              class="logo__img"
+              src="images/logo.svg"
+              alt="NAMU logo"
+            />
+          </a>
+
+          <ul class="socials">
+            <li class="socials__item">
+              <a class="icon icon--facebook" href="#">
+                <span class="sr-only">Open Facebook</span>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a class="icon icon--instagram" href="#">
+                <span class="sr-only">Open Instargam</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__content">
+          <div class="footer__timetable timetable">
+            <span class="timetable__title">Графік роботи</span>
+
+            <div class="timetable__inner">
+              <ul class="timetable__list">
+                <li class="timetable__item">
+                  <span class="timetable__time">12:00 — 20:00</span>
+                  середа
+                </li>
+                <li class="timetable__item">
+                  <span class="timetable__time">12:00 — 20:00</span>
+                  четвер
+                </li>
+                <li class="timetable__item">
+                  <span class="timetable__time">12:00 — 20:00</span>
+                  п’ятниця
+                </li>
+                <li class="timetable__item">
+                  <span class="timetable__time">11:00 — 19:00</span>
+                  субота
+                </li>
+                <li class="timetable__item">
+                  <span class="timetable__time">11:00 — 19:00</span>
+                  неділя
+                </li>
+              </ul>
+
+              <div class="timetable__texts">
+                <p class="timetable__text">
+                  <span>Вихідні:</span> понеділок, вівторок
+                </p>
+
+                <p class="timetable__text">
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <address class="footer__contacts contacts">
+            <span class="contacts__title">Контакти:</span>
+
+            <a
+              class="contacts__link"
+              href="https://maps.app.goo.gl/cvrP4omdVS2f81ti7"
+              target="_blank"
+            >
+              <span class="contacts__link-title">вул.</span>
+               М. Грушевського, 6; Київ, 01001
+            </a>
+
+            <a class="contacts__link" href="tel:+380442781357">
+              <span class="contacts__link-title">тел.</span>
+              +38 (044) 278-13-57
+            </a>
+
+            <a class="contacts__link" href="tel:+380442787454">
+              <span class="contacts__link-title">факс.</span>
+              +38 (044) 278-74-54
+            </a>
+
+            <a
+              class="contacts__link"
+              href="mailto:info@namu.kiev.ua"
+              target="_blank"
+            >
+              <span class="contacts__link-title">e-mail:</span>
+              info@namu.kiev.ua
+            </a>
+          </address>
+        </div>
+
+        <nav class="footer__nav nav nav--footer">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="#galery">Галерея</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#hero">Про Нас</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#events">Виставки та події</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#footer">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="footer__info">
+          <p class="footer__designer">
+            Designed by
+            <a href="#">Zhyriada Marina</a>
+          </p>
+          <p class="footer__copy">Copyright © 2019. All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
