make some fixes

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="icon" href="./images/logo.svg" />
     <link rel="stylesheet" href="styles/style.scss" />
   </head>
@@ -40,7 +40,7 @@
                 <a class="nav__link" href="#galery">Галерея</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="#hero">Про Нас</a>
+                <a class="nav__link" href="#subscription">Про Нас</a>
               </li>
               <li class="nav__item">
                 <a class="nav__link" href="#events">Виставки та події</a>
@@ -271,7 +271,6 @@
           <form
             class="subscription__form form"
             action="#"
-            onsubmit="this.reset(); return false;"
           >
             <label class="sr-only" for="email">
               Please, enter your email!
@@ -286,7 +285,7 @@
               required
             />
 
-            <button class="form__btn btn btn--square">
+            <button class="form__btn btn btn--square" type="submit">
               <span class="sr-only">Send email to subscribe</span>
             </button>
           </form>
@@ -311,12 +310,20 @@
 
           <ul class="socials">
             <li class="socials__item">
-              <a class="icon icon--facebook" href="#">
+              <a
+                class="icon icon--facebook"
+                href="#"
+                target="_blank"
+              >
                 <span class="sr-only">Open Facebook</span>
               </a>
             </li>
             <li class="socials__item">
-              <a class="icon icon--instagram" href="#">
+              <a
+                class="icon icon--instagram"
+                href="#"
+                target="_blank"
+              >
                 <span class="sr-only">Open Instargam</span>
               </a>
             </li>
@@ -402,7 +409,7 @@
               <a class="nav__link" href="#galery">Галерея</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link" href="#hero">Про Нас</a>
+              <a class="nav__link" href="#subscription">Про Нас</a>
             </li>
             <li class="nav__item">
               <a class="nav__link" href="#events">Виставки та події</a>
