--- a/src/index.html
+++ b/src/index.html
@@ -380,14 +380,14 @@
                   name="email"
                   placeholder="Email"
                   class="sign-up__input"
+                  area-reqiured = "true"
                   required
                 />
+                <button
+                  type ="submit"
+                  class="button button--red"
+                ></button>
               </form>
-              <a
-                href="#events"
-                class="button button--red"
-                target="_blank"
-              ></a>
             </div>
           </div>
         </section>
@@ -483,6 +483,7 @@
           <a
             href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4508402,30.5308666,17z/data=!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F11l76wtstx?entry=ttu"
             class="footer__contacts-link"
+            target = "_blank"
           >
             вул. М. Грушевського, 6; Київ, 01001
           </a>
