--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,131 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="ua"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="icon"
+      href="./images/logo.svg"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <header></header>
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="header__top">
+            <a
+              href="#menu"
+              class="icon header__menu"
+            ></a>
+          </div>
+        </div>
+      </div>
+      <div class="header__bg-container">
+        <div class="header__bg-reference">
+          <img
+            class="header__bg"
+            src="./images/header/header-bg.png"
+            alt="Natsionalnij hudozhnij muzej Ukrayini Kiyiv"
+          />
+          <a
+            class="header__icon"
+            href="index.html"
+          >
+            NA
+            <br />
+            MU
+          </a>
+        </div>
+      </div>
+    </header>
+    <aside
+      class="menu page__menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__page_layout">
+            <a
+              href="#"
+              class="icon menu__close"
+            ></a>
+            <nav class="menu__nav">
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a
+                    href="#"
+                    class="menu__link"
+                  >
+                    Галерея
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a
+                    href="#"
+                    class="menu__link"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <br />
+                <li class="menu__item">
+                  <a
+                    href="#"
+                    class="menu__link"
+                  >
+                    Виставки та події
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a
+                    href="#"
+                    class="menu__link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="menu__schedule"></div>
+        </div>
+      </div>
+    </aside>
     <body></body>
     <footer></footer>
     <script src="scripts/main.js"></script>
