--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,336 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>НАМУ</title>
+    <link
+      rel="icon"
+      href="./images/icon/icon.png"
+      type="image/png"
+      sizes="32x32"
+    >
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/style.scss"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <script src="scripts/main.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__img">
+        <div class="logo header__img--logo-position">
+          <a href="#" class="logo__link">
+            <img
+              src="./images/icon/icon.png"
+              alt="logo-image"
+              class="logo__img"
+            >
+          </a>
+        </div>
+      </div>
+      <div class="container">
+        <div class="header__content">
+          <a href="#menu" class="header__icon"></a>
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <a href="#lecture" class="header__button button">
+            <div class="button__left-side">
+              <p class="button__text">КВИТКИ</p>
+            </div>
+            <div class="button__right-side"></div>
+          </a>
+          <div class="header__event-link">
+            <div class="header__line"></div>
+            <a href="#events" class="header__link">ПОДІЇ</a>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside class="menu page__menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a href="#" class="menu__icon"></a>
+            <ul class="menu__nav nav">
+              <li class="nav__item nav__item--first">
+                <a href="#gallery" class="nav__link">Галерея</a>
+              </li>
+              <li class="nav__item nav__item--second">
+                <a href="#subscription" class="nav__link">Про Нас</a>
+              </li>
+              <li class="nav__item nav__item--third">
+                <a href="#events" class="nav__link">Виставки та <br>події</a>
+              </li>
+              <li class="nav__item nav__item--fourth">
+                <a href="#footer" class="nav__link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+          <div class="menu__line"></div>
+          <div class="menu__timetable timetable">
+            <div class="timetable__schedule">
+              <h2 class="timetable__title">Графік роботи</h2>
+              <div class="timetable__hours">
+                <p class="timetable__hour">12:00— 20:00 <span class="timetable__hour--day">середа</span></p>
+                <p class="timetable__hour">12:00— 20:00 <span class="timetable__hour--day">четвер</span></p>
+                <p class="timetable__hour">12:00 — 20:00 <span class="timetable__hour--day">п’ятниця</span></p>
+                <p class="timetable__hour">11:00 — 19:00 <span class="timetable__hour--day">субота</span></p>
+                <p class="timetable__hour">11:00 — 19:00 <span class="timetable__hour--day">неділя</span></p>
+              </div>
+            </div>
+            <p class="timetable__weekend">Вихідні: <span class="timetable__hour--day">понеділок, вівторок <br>Каса припиняє роботу за 1 годину до закриття музею</span></p>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+
+
+    <div class="scroll-to-top"></div>
+
+    <main class="page__main">
+      <section class="events" id="events">
+        <div class="container">
+          <h2 class="section-title">Актуальні події</h2>
+          <div class="events__content">
+            <div class="event">
+              <div class="event__picture event__picture--first"></div>
+              <div class="event__event-attributes">
+                <div class="event__date">
+                  <p class="event__exhibition">ВИСТАВКА</p>
+                  <p class="event__period">26.08-29.11.2019</p>
+                </div>
+                <h3 class="event__title">Йду і повертаюсь</h3>
+                <p class="event__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+              </div>
+            </div>
+
+            <div class="event">
+              <div class="event__picture event__picture--second"></div>
+              <div class="event__event-attributes">
+                <div class="event__date">
+                  <p class="event__exhibition">ВИСТАВКА</p>
+                  <p class="event__period">26.08-29.11.2019</p>
+                </div>
+                <h3 class="event__title">І спогади і мрії</h3>
+                <p class="event__description">Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="lecture" id="lecture">
+        <div class="container">
+          <div class="lecture__content">
+            <div class="lecture__pretitle">
+              <p class="lecture__name">ЛЕКЦІЯ</p>
+              <p class="lecture__date">26/08/2019 - 11:00</p>
+            </div>
+            <div class="lecture__title">Від класицизму до романтизму</div>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery" id="gallery">
+        <div class="container">
+          <h2 class="section-title">Галерея</h2>
+          <div class="image-slider">
+            <div class="swiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img
+                    src="./images/gallery/swipper_1.png"
+                    alt="first-slider"
+                    class="image"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="./images/gallery/swipper_2.png"
+                    alt="second-slider"
+                    class="image"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="./images/gallery/swipper_3.png"
+                    alt="third-slider"
+                    class="image"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="./images/gallery/swipper_4.png"
+                    alt="fourth-slider"
+                    class="image"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="image-slider__pagination swiper-pagination"></div>
+          </div>
+          <div class="gallery__desktop-content">
+            <div class="paintings">
+              <div class="paintings__first-row">
+                <div class="paintings__first-painting">
+                  <img
+                    src="./images/gallery/1.1.png"
+                    alt="first-painting"
+                    class="image"
+                  />
+                </div>
+                <div class="paintings__second-painting">
+                  <img
+                    src="./images/gallery/1.2.png"
+                    alt="second-painting"
+                    class="image"
+                  />
+                </div>
+              </div>
+              <div class="paintings__second-row">
+                <div class="paintings__third-painting">
+                  <img
+                    src="./images/gallery/2.1.png"
+                    alt="third-painting"
+                    class="image"
+                  />
+                </div>
+                <div class="paintings__fourth-painting">
+                  <img
+                    src="./images/gallery/2.2.png"
+                    alt="fourth-painting"
+                    class="image"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscription" id="subscription">
+        <div class="container">
+          <div class="subscription__content">
+            <div class="subscription__top">
+              <div class="subscription__title">
+                Підписка
+              </div>
+              <div class="subscription__text">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </div>
+            </div>
+            <form
+              onsubmit="this.reset(); return false;"
+              action="/"
+              method="post"
+              class="subscription__bottom"
+              name="email-form"
+            >
+              <input
+                type="email"
+                class="subscription__email-field"
+                placeholder="E-mail"
+                required
+                >
+              <button class="subscription__button"></button>
+            </form>
+          </div>
+        </div>
+      </section>
+
+      <footer class="footer" id="footer">
+        <div class="container">
+          <div class="footer__content">
+            <div class="footer__links">
+              <div class="logo">
+                <a href="#" class="logo__link">
+                  <img
+                    src="./images/icon/icon.png"
+                    alt="logo-image"
+                    class="logo__img"
+                  >
+                </a>
+              </div>
+              <div class="footer__media-links">
+                <a href="https://www.facebook.com" class="footer__media-link">
+                  <img src="./images/facebook-logo.png" alt="facebook-logo">
+                </a>
+                <a href="https://www.instagram.com/" class="footer__media-link">
+                  <img src="./images/instagram-logo.png" alt="instagram-logo">
+                </a>
+              </div>
+            </div>
+
+            <div class="footer__all-information">
+              <div class="footer__timetable-and-contacts">
+                <div class="footer__timetable timetable timetable--for-footer">
+                  <div class="timetable__schedule">
+                    <h2 class="timetable__title">Графік роботи</h2>
+                    <div class="timetable__hours">
+                      <p class="timetable__hour">12:00— 20:00 <span class="timetable__hour--day">середа</span></p>
+                      <p class="timetable__hour">12:00— 20:00 <span class="timetable__hour--day">четвер</span></p>
+                      <p class="timetable__hour">12:00 — 20:00 <span class="timetable__hour--day">п’ятниця</span></p>
+                      <p class="timetable__hour">11:00 — 19:00 <span class="timetable__hour--day">субота</span></p>
+                      <p class="timetable__hour">11:00 — 19:00 <span class="timetable__hour--day">неділя</span></p>
+                    </div>
+                  </div>
+                  <p class="timetable__weekend">Вихідні: <span class="timetable__hour--day">понеділок, вівторок <br>Каса припиняє роботу за 1 годину до закриття музею</span></p>
+                </div>
+                <div class="footer__contacts contacts">
+                  <h2 class="contacts__title">Контакти</h2>
+                  <div class="contacts__links">
+                    <a href="https://maps.app.goo.gl/aDxzCYSiAPJ6DKmD6" class="contacts__link">вул. М. Грушевського, 6; Київ, 01001</a>
+                    <a href="tel:+38(044)2781357" class="contacts__link">тел. +38 (044) 278-13-57</a>
+                    <a href="tel:+38(044)2787454" class="contacts__link">факс +38 (044) 278-74-54</a>
+                    <a href="mailto:info@namu.kiev.ua" class="contacts__link">e-mail: info@namu.kiev.ua</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="footer__line"></div>
+
+              <div class="footer__menu">
+                <ul class="nav footer__nav">
+                  <li class="nav__item nav__item--for-footer nav__item--first">
+                    <a href="#gallery" class="nav__link nav__link--for-footer">Галерея</a>
+                  </li>
+                  <li class="nav__item nav__item--for-footer nav__item--second">
+                    <a href="#subscription" class="nav__link nav__link--for-footer">Про Нас</a>
+                  </li>
+                  <li class="nav__item nav__item--for-footer nav__item--third">
+                    <a href="#events" class="nav__link nav__link--for-footer">Виставки та <br>події</a>
+                  </li>
+                  <li class="nav__item nav__item--for-footer nav__item--fourth">
+                    <a href="#footer" class="nav__link nav__link--for-footer">Контакти</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer__design-and-copyright">
+            <p class="footer__design-and-copyright--font-style">Designed by Zhyriada Marina</p>
+            <p class="footer__design-and-copyright--font-style">Copyright © 2019. All Rights Reserved.</p>
+          </div>
+        </div>
+      </footer>
+    </main>
+
   </body>
 </html>
