solution was changed

--- a/src/index.html
+++ b/src/index.html
@@ -269,10 +269,18 @@
                 </a>
               </div>
               <div class="footer__media-links">
-                <a href="https://www.facebook.com" class="footer__media-link">
+                <a
+                  href="https://www.facebook.com"
+                  class="footer__media-link"
+                  target="_blank"
+                >
                   <img src="./images/facebook-logo.png" alt="facebook-logo">
                 </a>
-                <a href="https://www.instagram.com/" class="footer__media-link">
+                <a
+                  href="https://www.instagram.com/"
+                  class="footer__media-link"
+                  target="_blank"
+                >
                   <img src="./images/instagram-logo.png" alt="instagram-logo">
                 </a>
               </div>
@@ -297,9 +305,25 @@
                   <h2 class="contacts__title">Контакти</h2>
                   <div class="contacts__links">
                     <a href="https://maps.app.goo.gl/aDxzCYSiAPJ6DKmD6" class="contacts__link">вул. М. Грушевського, 6; Київ, 01001</a>
-                    <a href="tel:+38(044)2781357" class="contacts__link">тел. +38 (044) 278-13-57</a>
-                    <a href="tel:+38(044)2787454" class="contacts__link">факс +38 (044) 278-74-54</a>
-                    <a href="mailto:info@namu.kiev.ua" class="contacts__link">e-mail: info@namu.kiev.ua</a>
+                    <a
+                      href="tel:+38(044)2781357"
+                      class="contacts__link"
+                      target="_blank"
+                    >
+                      тел. +38 (044) 278-13-57
+                    </a>
+                    <a
+                      href="tel:+38(044)2787454"
+                      class="contacts__link"
+                      target="_blank">
+                        факс +38 (044) 278-74-54
+                    </a>
+                    <a
+                      href="mailto:info@namu.kiev.ua"
+                      class="contacts__link"
+                      target="_blank">
+                        e-mail: info@namu.kiev.ua
+                    </a>
                   </div>
                 </div>
               </div>
